metrics/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: maguroskey-network-policy
  namespace: maguroskey
spec:
  endpointSelector: {}
  ingress:
    # ---allow-ingress-from-namespace---
    - fromEndpoints:
        - {}
    # ---allow-ingress-from-namespace---
    # ---postgresql---
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9187"
    # ---postgresql---
    # ---misskey-web---
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP       
          # CiliumがL7のプロキシに利用しているEnvoyがWebSocketのConnectメソッドに対応していないのでL7を有効にしない
          # rules:
          #   http: [{}]     
    # ---misskey-web---
  egress:
    # ---allow-kube-dns---
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # ---allow-kube-dns---
    # ---allow-egress-to-namespace---
    - toEndpoints:
        - {}
    # ---allow-egress-to-namespace---
    # ---allow-create-postgresql-backup---
    - toEntities:
        - cluster
    # ---allow-create-postgresql-backup---
    # ---allow-outbound-tcp---
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # ---allow-outbound-tcp---
